--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clean-webpack-plugin": "0.1.10",
     "css-loader": "0.25.0",
     "file-loader": "0.9.0",
+    "json-loader": "^0.5.4",
     "less": "2.7.1",
     "ng-annotate-webpack-plugin": "0.1.3",
     "node-libs-browser": "1.0.0",
